manifests/teamcity/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: PG_DATA
              value: /var/lib/postgresql/data
            - name: POSTGRES_DB
              value: teamcity_db
            - name: POSTGRES_PASSWORD
              value: teamcity_password
            - name: POSTGRES_USER
              value: teamcity_user
          image: postgres:latest
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-volume
              subPath: postgres
      restartPolicy: Always
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-claim0
status: {}
