manifests/teamcity/teamcity-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: teamcity
  name: teamcity
spec:
  ports:
    - name: "8112"
      port: 8112
      targetPort: 8111
  selector:
    io.kompose.service: teamcity
status:
  loadBalancer: {}
